--- a/_config.yml
+++ b/_config.yml
@@ -104,9 +104,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Donghyeok Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "Recording What I Study"
   location         : "Somewhere"
   email            :
   links:
