--- a/_config.yml
+++ b/_config.yml
@@ -157,6 +157,8 @@ include:
   - .htaccess
   - _pages
 exclude:
+  - node_modules
+  - dev-youtubesite
   - "*.sublime-project"
   - "*.sublime-workspace"
   - vendor
