--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -33,8 +33,8 @@ entries:
         output: web
         subfolderitems:
 
-        - title: Formatting pages
-          url: /tag_formatting.html
+        - title: 옹알이(1)_programmers_Lv0
+          url: /programmers_Lv00_001.html
           output: web
 
         - title: Navigation pages
@@ -42,16 +42,16 @@ entries:
           output: web    
       
       - title: Javascript
-        output: web
+        output: web, pdf
         subfolderitems:
 
         - title: Programmers_lv00_옹알이(1)
-          url: /codingTest/python/옹알이(1).html
-          output: web
+          url: /python_test.html
+          output: web, pdf
 
         - title: Navigation pages
-          url: /tag_navigation.html
-          output: web    
+          url: /tag_navigation1.html
+          output: web, pdf    
       
       
       
