--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -24,8 +24,8 @@ entries:
     output: web
     folderitems:
 
-    - title: Coding Test Preview
-      url: /mydoc_tag_archives_overview.html
+    - title: 코딩테스트 연습하러가기
+      url: https://programmers.co.kr/
       output: web
 
       subfolders:
