--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -50,7 +50,7 @@ entries:
         output: web
         subfolderitems:
 
-        - title: 옹알이(1)_programmers_Lv0
+        - title: 옹알이(1)_programmers_Lv0 
           url: /programmers_Lv00_001.html
           output: web
 
@@ -86,7 +86,7 @@ entries:
           url: /programmers_Lv00_009.html
           output: web  
 
-        - title: 제곱수 판별하기_programmers_Lv0
+        - title: 제곱수 판별하기_programmers_Lv0 ########## 10
           url: /programmers_Lv00_010.html
           output: web  
 
@@ -110,10 +110,6 @@ entries:
           url: /programmers_Lv00_015.html
           output: web  
 
-        - title: 숫자 찾기_programmers_Lv0
-          url: /programmers_Lv00_015.html
-          output: web  
-
         - title: 배열의 유사도_programmers_Lv0
           url: /programmers_Lv00_016.html
           output: web  
@@ -130,7 +126,7 @@ entries:
           url: /programmers_Lv00_019.html
           output: web  
 
-        - title: 약수 구하기_programmers_Lv0
+        - title: 약수 구하기_programmers_Lv0 ########## 20
           url: /programmers_Lv00_020.html
           output: web  
 
@@ -170,7 +166,7 @@ entries:
           url: /programmers_Lv00_029.html 
           output: web  
 
-        - title: k의 개수_programmers_Lv0 
+        - title: k의 개수_programmers_Lv0 ########## 30
           url: /programmers_Lv00_030.html 
           output: web  
 
@@ -210,9 +206,92 @@ entries:
           url: /programmers_Lv00_039.html 
           output: web  
 
-        - title: 저주의 숫자 3_programmers_Lv0 
+        - title: 저주의 숫자 3_programmers_Lv0 ########## 40
           url: /programmers_Lv00_040.html 
-          output: web  
+          output: web
+
+        - title: 외계어 사전_programmers_Lv0 
+          url: /programmers_Lv00_041.html 
+          output: web 
+
+        - title: 삼각형의 완성조건 (2)_programmers_Lv0 
+          url: /programmers_Lv00_042.html 
+          output: web 
+
+        - title: 안전지대_programmers_Lv0 
+          url: /programmers_Lv00_043.html 
+          output: web 
+
+        - title: 숨어있는 숫자의 덧셈 (2)_programmers_Lv0 
+          url: /programmers_Lv00_044.html 
+          output: web 
+
+        - title: 다항식 더하기_programmers_Lv0 
+          url: /programmers_Lv00_045.html 
+          output: web 
+
+        - title: 최댓값 만들기 (2)_programmers_Lv0 
+          url: /programmers_Lv00_046.html 
+          output: web 
+
+        - title: 캐릭터의 좌표_programmers_Lv0 
+          url: /programmers_Lv00_047.html 
+          output: web 
+
+        - title: 직사각형 넓이 구하기_programmers_Lv0 
+          url: /programmers_Lv00_048.html 
+          output: web 
+
+        - title: 배열 원소의 길이_programmers_Lv0 
+          url: /programmers_Lv00_049.html 
+          output: web 
+
+        - title: 컨트롤 제트_programmers_Lv0 ########## 50
+          url: /programmers_Lv00_050.html 
+          output: web 
+
+        - title: 소인수분해_programmers_Lv0 
+          url: /programmers_Lv00_051.html 
+          output: web 
+
+        - title: 숨어있는 숫자의 덧셈 (1)_programmers_Lv0 
+          url: /programmers_Lv00_052.html 
+          output: web 
+
+        - title: 문자열 정렬하기 (1)_programmers_Lv0 
+          url: /programmers_Lv00_053.html 
+          output: web 
+
+        - title: 모음 제거_programmers_Lv0 
+          url: /programmers_Lv00_054.html 
+          output: web 
+
+        - title: 팩토리얼_programmers_Lv0 
+          url: /programmers_Lv00_055.html 
+          output: web 
+
+        - title: 최댓값 만들기(1)_programmers_Lv0 
+          url: /programmers_Lv00_056.html 
+          output: web 
+
+        - title: 합성수 찾기_programmers_Lv0 
+          url: /programmers_Lv00_057.html 
+          output: web 
+
+        - title: 주사위의 개수_programmers_Lv0 
+          url: /programmers_Lv00_058.html 
+          output: web 
+
+        - title: 배열 회전시키기_programmers_Lv0 
+          url: /programmers_Lv00_059.html 
+          output: web 
+
+        - title: 공 던지기_programmers_Lv0 ########## 60
+          url: /programmers_Lv00_060.html 
+          output: web 
+
+
+          
 
 
       
