--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -2,9 +2,12 @@
 # If you are using the createtag script, don't leave a blank line at the end of this file.
 # In other words, the last line must be the last tag in the allowed-tags list.
 allowed-tags:
-  - getting_started
-  - content_types
-  - navigation
+  # - getting_started
+  # - content_types
+  # - navigation
+  - CodingTest
+  - mainPage
+  - softwareEngineering
   - formatting
   - publishing
   - single_sourcing
@@ -13,8 +16,6 @@ allowed-tags:
   - news
   - troubleshooting
   - mobile
-  - CodingTest
-  - mainPage
-  - softwareEngineering
+  
 
 # Copyright 2021 Google LLC
