--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -370,6 +370,90 @@ entries:
           url: /programmers_Lv00_080.html 
           output: web 
 
+        - title: 아이스 아메리카노_programmers_Lv0 
+          url: /programmers_Lv00_081.html 
+          output: web 
+
+        - title: 옷가게 할인 받기_programmers_Lv0 
+          url: /programmers_Lv00_082.html 
+          output: web 
+
+        - title: 배열의 평균값_programmers_Lv0 
+          url: /programmers_Lv00_083.html 
+          output: web 
+
+        - title: 피자 나눠 먹기 (3)_programmers_Lv0 
+          url: /programmers_Lv00_084.html 
+          output: web 
+
+        - title: 피자 나눠 먹기 (2)_programmers_Lv0 
+          url: /programmers_Lv00_085.html 
+          output: web 
+
+        - title: 피자 나눠 먹기 (1)_programmers_Lv0 
+          url: /programmers_Lv00_086.html 
+          output: web 
+
+        - title: 짝수는 싫어요_programmers_Lv0 
+          url: /programmers_Lv00_087.html 
+          output: web 
+
+        - title: 최빈값 구하기_programmers_Lv0 
+          url: /programmers_Lv00_088.html 
+          output: web 
+
+        - title: 중앙값 구하기_programmers_Lv0 
+          url: /programmers_Lv00_089.html 
+          output: web 
+
+        - title: 나머지 구하기_programmers_Lv0 ########## 90
+          url: /programmers_Lv00_090.html 
+          output: web 
+
+        - title: 배열 두 배 만들기_programmers_Lv0 
+          url: /programmers_Lv00_091.html 
+          output: web 
+
+        - title: 분수의 덧셈_programmers_Lv0 
+          url: /programmers_Lv00_092.html 
+          output: web 
+
+        - title: 숫자 비교하기_programmers_Lv0 
+          url: /programmers_Lv00_093.html 
+          output: web 
+
+        - title: 두 수의 나눗셈_programmers_Lv0 
+          url: /programmers_Lv00_094.html 
+          output: web 
+
+        - title: 몫 구하기_programmers_Lv0 
+          url: /programmers_Lv00_095.html 
+          output: web 
+
+        - title: 두 수의 곱_programmers_Lv0 
+          url: /programmers_Lv00_096.html 
+          output: web 
+
+        - title: 두 수의 차_programmers_Lv0 
+          url: /programmers_Lv00_097.html 
+          output: web 
+
+        - title: 두 수의 합_programmers_Lv0 
+          url: /programmers_Lv00_098.html 
+          output: web 
+
+        - title: 머쓱이보다 키 큰 사람_programmers_Lv0 
+          url: /programmers_Lv00_099.html 
+          output: web 
+
+        - title: 중복된 숫자 개수_programmers_Lv0 ########## 100
+          url: /programmers_Lv00_0100.html 
+          output: web 
+
+
+
+
+
 
 
 
