--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -39,12 +39,12 @@ entries:
       url: /javascript01.html
       output: web
 
-  - title: Javascript Study
+  - title: Portfolio
     output: web
     folderitems:
 
-    - title: Javascript 문법 및 용어 정리
-      url: /javascript01.html
+    - title: Stock Analyzing App
+      url: /stockAnalyzing.html
       output: web
   
   # - title: Software Engineering
